# base64

./: CMakeLists.txt
lib/: codec_choose.c  codecs.h
lib/arch/avx/: codec.c
lib/arch/avx2/: codec.c
lib/arch/generic/: codec.c
lib/arch/neon32/: codec.c
lib/arch/neon64/: codec.c
lib/arch/sse41/: codec.c
lib/arch/sse42/: codec.c
lib/arch/ssse3/: codec.c
